find_package(VesylaUtils REQUIRED)
set(CURRENT_SUBPROJECT_NAME "vs-testcase")

cargo_build()

vesyla_install()

install(DIRECTORY template DESTINATION share/${PROJECT_NAME} PATTERN "*.sh" EXCLUDE)
file(COPY template DESTINATION ${CMAKE_SHARED_OUTPUT_DIRECTORY} PATTERN "*.sh" EXCLUDE)
install(DIRECTORY template DESTINATION share/${PROJECT_NAME} PATTERN "*.sh" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
file(COPY template DESTINATION ${CMAKE_SHARED_OUTPUT_DIRECTORY} PATTERN "*.sh" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
install(DIRECTORY testcase DESTINATION share/${PROJECT_NAME})
file(COPY testcase DESTINATION ${CMAKE_SHARED_OUTPUT_DIRECTORY})
