[package]
name = "vs-testcase"
version = "4.2.0"
edition = "2021"

# targets
[[bin]]
name = "vs-testcase"
path = "src/main.rs"


# Dependencies can be added here. For example:
[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.14"
env_logger = "0.10.0"
argparse = "0.2.0"
glob = "0.3.0"
chrono = "0.4.19"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
