[package]
name = "vs-component"
edition = "2021"
description = "Vesyla tool to generate fabrics RTL and SST simulation configurations from high-level descriptions."

[[bin]]
name = "vs-component"
path = "src/main.rs"

[dependencies]
bs58 = "0.5.1"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.8"
jsonschema = "0.30.0"
log = "0.4.14"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
minijinja = { version = "2.0.2", features = ["loader"] }
serde = "1.0.215"
serde_json = "1.0.70"
serde_yml = "0.0.12"
svg = "0.18.0"
tempfile = "3.20.0"
walkdir = "2.5.0"
