[package]
name = "vs-manas"
edition = "2021"

[[bin]]
name = "vs-manas"
path = "src/main.rs"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
env_logger = "0.11.8"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.17", features = ["v4"] }
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
