[package]
name = "vs-testcase"
edition = "2021"

[[bin]]
name = "vs-testcase"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.14"
minijinja = { version = "2.0.2", features = ["loader"] }
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.20.0"
