[package]
name = "vs-testcase"
edition = "2021"

[[bin]]
name = "vs-testcase"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
minijinja = { version = "2.10.2", features = ["loader"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
