set(CMAKE_COMPONENTS_OUTPUT_DIRECTORY ${CMAKE_SHARED_OUTPUT_DIRECTORY}/components/fabric)
set(INSTALL_COMPONENTS_OUTPUT_DIRECTORY ${INSTALL_SHARED_OUTPUT_DIRECTORY}/components/fabric)

install(FILES fabric.sv DESTINATION ${INSTALL_COMPONENTS_OUTPUT_DIRECTORY})
file(COPY fabric.sv DESTINATION ${CMAKE_COMPONENTS_OUTPUT_DIRECTORY})
install(FILES fabric_tb.sv DESTINATION ${INSTALL_COMPONENTS_OUTPUT_DIRECTORY})
file(COPY fabric_tb.sv DESTINATION ${CMAKE_COMPONENTS_OUTPUT_DIRECTORY})