set(CMAKE_COMPONENTS_OUTPUT_DIRECTORY ${CMAKE_SHARED_OUTPUT_DIRECTORY}/components/utils)
set(INSTALL_COMPONENTS_OUTPUT_DIRECTORY ${INSTALL_SHARED_OUTPUT_DIRECTORY}/components/utils)

set(FILE_LIST agu.sv fsm.sv sram_model.sv)
install(FILES ${FILE_LIST} DESTINATION ${INSTALL_COMPONENTS_OUTPUT_DIRECTORY})
file(COPY ${FILE_LIST} DESTINATION ${CMAKE_COMPONENTS_OUTPUT_DIRECTORY})